Add "deploy" step and content tweaks

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,6 +1,6 @@
 +++
-title = "Goldydocs"
-linkTitle = "Goldydocs"
+title = "Tobeva Software"
+linkTitle = "Tobeva"
 
 +++
 
@@ -12,3 +12,4 @@ linkTitle = "Goldydocs"
 	<p class="lead mt-5">Consult &middot; Design &middot; Develop</p>
 </div>
 {{< /blocks/cover >}}
+
