--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -10,29 +10,46 @@ menu:
 
 {{< blocks/cover title="About Tobeva Software" image_anchor="bottom" height="min" >}}
 
-<p class="lead mt-5">Consult &middot; Design &middot; Develop
-</p>
-
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
-Section 1
+Full lifecycle advice, design and development.
 {{% /blocks/lead %}}
 
 
 {{< blocks/section >}}
 <div class="col-12">
-<h1 class="text-center">Section 2</h1>
+<h1 class="text-center">
+Cloud-based data pipelines, high performance computing, computer graphics.
+</h1>
+</div>
+
+{{< /blocks/section >}}
+
+{{< blocks/section >}}
+<div class="col-12">
+<h1 class="text-center">
+Industry experience in CAD, Video Games, Simulations, Neuroscience Imaging, Geospatial.
+</h1>
 </div>
 
 {{< /blocks/section >}}
 
 
-
 {{< blocks/section >}}
+{{% blocks/feature icon="fab fa-linkedin" title="LinkedIn" %}}
+<a href="http://linkedin.com/in/pwinston">Philip Winston</a>
+{{% /blocks/feature %}}
 
-<div class="col-12">
-<h1 class="text-center">Section 3</h1>
-</div>
+
+{{% blocks/feature icon="fas fa-envelope" title="Email" %}}
+philip @ tobeva.com
+{{% /blocks/feature %}}
+
+
+{{% blocks/feature icon="fab fa-twitter" title="Twitter" %}}
+<a href="http://twitter.com/pbwinston">@pbwinston</a>
+{{% /blocks/feature %}}
+
 
 {{< /blocks/section >}}
