--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -8,19 +8,19 @@ menu:
 ---
 
 
-{{< blocks/cover title="About Tobeva Software" image_anchor="bottom" height="min" >}}
+{{< blocks/cover title="Tobeva Software" image_anchor="bottom" height="min" >}}
 
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
-Full lifecycle advice, design and development.
+Consult &middot; Design &middot; Develop
 {{% /blocks/lead %}}
 
 
 {{< blocks/section >}}
 <div class="col-12">
 <h1 class="text-center">
-Cloud-based data pipelines, high performance computing, computer graphics.
+Cloud-based data pipelines, performance critical systems, computer graphics.
 </h1>
 </div>
 
@@ -29,7 +29,7 @@ Cloud-based data pipelines, high performance computing, computer graphics.
 {{< blocks/section >}}
 <div class="col-12">
 <h1 class="text-center">
-Industry experience in CAD, Video Games, Simulations, Neuroscience Imaging, Geospatial.
+Industries include CAD, Haptics, Video Games, Simulations, Neuroscience, Geospatial.
 </h1>
 </div>
 
@@ -42,8 +42,7 @@ Industry experience in CAD, Video Games, Simulations, Neuroscience Imaging, Geos
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fas fa-envelope" title="Email" %}}
-philip @ tobeva.com
+{{% blocks/feature icon="fas fa-envelope" title="philip @ tobeva" %}}
 {{% /blocks/feature %}}
 
 
