Added resume, working on wiki

--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -9,6 +9,11 @@ menu:
 
 
 {{< blocks/cover title="Tobeva Software" image_anchor="bottom" height="min" >}}
+<div class="mx-auto">
+	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< ref "/blog/news/first-post" >}}">
+		Happy Birthday Post <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+	</a>
+</div>
 
 {{< /blocks/cover >}}
 
@@ -43,6 +48,7 @@ Industries include CAD, Haptics, Video Games, Simulations, Neuroscience, Geospat
 
 
 {{% blocks/feature icon="fas fa-envelope" title="philip @ tobeva" %}}
+[PDF Resume](philip_winston_resume.pdf)
 {{% /blocks/feature %}}
 
 
