--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -9,6 +9,9 @@ linkTitle = "Tobeva"
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/about" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
+	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< ref "/blog/news/first-post" >}}">
+		Happy Birthday Post <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+	</a>
 	<p class="lead mt-5">Consult &middot; Design &middot; Develop</p>
 </div>
 {{< /blocks/cover >}}
