2nd blog post, new landing page, fix wiki order

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -9,10 +9,51 @@ linkTitle = "Tobeva"
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/about" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< ref "/blog/news/first-post" >}}">
-		Happy Birthday Post <i class="fas fa-arrow-alt-circle-right ml-2"></i>
-	</a>
 	<p class="lead mt-5">Consult &middot; Design &middot; Develop</p>
+	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
+
+
+{{< blocks/section >}}
+<div class="col-12">
+<h1 class="text-center">
+Cloud-based data pipelines, performance critical systems, computer graphics.
+</h1>
+</div>
+
+{{< /blocks/section >}}
+
+{{< blocks/section >}}
+<div class="col-12">
+<h1 class="text-center">
+Industries include CAD, Haptics, Video Games, Simulations, Neuroscience, Geospatial.
+</h1>
+</div>
+
+{{< /blocks/section >}}
+
+
+{{< blocks/section >}}
+<div class="col-12">
+<h1 class="text-center">
+On site consultation, remote contracting.
+
+{{< /blocks/section >}}
+
+{{< blocks/section >}}
+{{% blocks/feature icon="fab fa-linkedin" title="LinkedIn" %}}
+<a href="http://linkedin.com/in/pwinston">Philip Winston</a>
+{{% /blocks/feature %}}
+
+
+{{% blocks/feature icon="fas fa-envelope" title="philip @ tobeva" %}}
+[PDF Resume](philip_winston_resume.pdf)
+{{% /blocks/feature %}}
+
+
+{{% blocks/feature icon="fab fa-twitter" title="Twitter" %}}
+<a href="http://twitter.com/pbwinston">@pbwinston</a>
+{{% /blocks/feature %}}
+
 
