Move resume PDF to static and update it

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -48,7 +48,7 @@ On site consultation, remote contracting.
 
 
 {{% blocks/feature icon="fas fa-envelope" title="philip @ tobeva" %}}
-[PDF Resume](philip_winston_resume.pdf)
+[PDF Resume](/philip_winston_resume.pdf)
 {{% /blocks/feature %}}
 
 
