Crazy zero image trick to prevent mailto links

--- a/content/_index.html
+++ b/content/_index.html
@@ -47,7 +47,7 @@ On site consultation, remote contracting.
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fas fa-envelope" title="philip @ tobeva" %}}
+{{% blocks/feature icon="fas fa-envelope" title="philip<img src='' width='0' height='0'>@tobeva.com" %}}
 [PDF Resume](/philip_winston_resume.pdf)
 {{% /blocks/feature %}}
 
