--- a/static/learn2/index.html
+++ b/static/learn2/index.html
@@ -1,6 +1,9 @@
 <html> 
 <head> 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script> 
+<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 <script src="http://www.skulpt.org/js/skulpt.min.js" type="text/javascript"></script> 
 <script src="http://www.skulpt.org/js/skulpt-stdlib.js" type="text/javascript"></script> 
 
