--- a/content/_index.html
+++ b/content/_index.html
@@ -1,47 +1,28 @@
 +++
 title = "Tobeva Software"
 linkTitle = "Tobeva"
-
+type = "community"
 +++
 
-{{< blocks/cover title="Welcome to Tobeva Software" image_anchor="top" height="full" color="orange" >}}
-<div class="mx-auto">
-	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/about" >}}">
-		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
-	</a>
-	<p class="lead mt-5">Consult &middot; Design &middot; Develop</p>
-	{{< blocks/link-down color="info" >}}
+
+
+{{< blocks/section color="secondary">}}
+<div class="container text-center td-arrow-down">
+    <span class="h4 mb-0">
+        <h2>Cloud Data Pipelines,</h2>
+        <h2>High Performance Systems</h2>
+        <h2>Computer Graphics.</h2>
+    </span>
+    <span class="h4 mb-4">
+        <a class="btn btn-lg btn-primary mt-3 mb-0" href="{{< relref "/about" >}}">
+            Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+        </a>
+    </span>
 </div>
-{{< /blocks/cover >}}
+{{< /blocks/section>}}
 
 
-{{< blocks/section >}}
-<div class="col-12">
-<h1 class="text-center">
-Cloud-based data pipelines, performance critical systems, computer graphics.
-</h1>
-</div>
-
-{{< /blocks/section >}}
-
-{{< blocks/section >}}
-<div class="col-12">
-<h1 class="text-center">
-Industries include CAD, Haptics, Video Games, Simulations, Neuroscience, Geospatial.
-</h1>
-</div>
-
-{{< /blocks/section >}}
-
-
-{{< blocks/section >}}
-<div class="col-12">
-<h1 class="text-center">
-On site consultation, remote contracting.
-
-{{< /blocks/section >}}
-
-{{< blocks/section >}}
+{{< blocks/section color="white">}}
 {{% blocks/feature icon="fab fa-linkedin" title="LinkedIn" %}}
 <a href="http://linkedin.com/in/pwinston">Philip Winston</a>
 {{% /blocks/feature %}}
@@ -55,5 +36,4 @@ On site consultation, remote contracting.
 {{% blocks/feature icon="fab fa-twitter" title="Twitter" %}}
 <a href="http://twitter.com/pbwinston">@pbwinston</a>
 {{% /blocks/feature %}}
-
-
+{{< /blocks/section>}}
