Remove punctuation, slightly cleaner looking

--- a/content/_index.html
+++ b/content/_index.html
@@ -9,9 +9,9 @@ type = "community"
 {{< blocks/section color="secondary">}}
 <div class="container text-center td-arrow-down">
     <span class="h4 mb-0">
-        <h2>Cloud Data Pipelines,</h2>
+        <h2>Cloud Data Pipelines</h2>
         <h2>High Performance Systems</h2>
-        <h2>Computer Graphics.</h2>
+        <h2>Computer Graphics</h2>
     </span>
     <span class="h4 mb-4">
         <a class="btn btn-lg btn-primary mt-3 mb-0" href="{{< relref "/about" >}}">
