Move button, use more feature blocks

--- a/content/_index.html
+++ b/content/_index.html
@@ -7,18 +7,20 @@ type = "community"
 
 
 {{< blocks/section color="secondary">}}
-<div class="container text-center td-arrow-down">
-    <span class="h4 mb-0">
-        <h2>Cloud Data Pipelines</h2>
-        <h2>High Performance Systems</h2>
-        <h2>Computer Graphics</h2>
-    </span>
-    <span class="h4 mb-4">
-        <a class="btn btn-lg btn-primary mt-5 mb-0" href="{{< relref "/about" >}}">
-            Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
-        </a>
-    </span>
-</div>
+
+{{% blocks/feature icon="far fa-clock" title="Performance" %}}
+Diagnose and optimize code.
+{{% /blocks/feature %}}
+
+{{% blocks/feature icon="far fa-eye" title="Computer Graphics" %}}
+Interactive 2D and 3D graphics.
+{{% /blocks/feature %}}
+
+{{% blocks/feature icon="fas fa-cogs" title="Cloud Data Pipelines" %}}
+Using AWS and other clouds.
+{{% /blocks/feature %}}
+
+
 {{< /blocks/section>}}
 
 
