--- a/content/_index.html
+++ b/content/_index.html
@@ -9,15 +9,15 @@ type = "community"
 {{< blocks/section color="secondary">}}
 
 {{% blocks/feature icon="far fa-clock" title="Performance" %}}
-Diagnose and optimize code
+We can diagnose and remedy complex performance problems.
 {{% /blocks/feature %}}
 
 {{% blocks/feature icon="far fa-eye" title="Computer Graphics" %}}
-Interactive 2D and 3D graphics
+Extensive experience in 2D and 3D visualizations and graphics.
 {{% /blocks/feature %}}
 
 {{% blocks/feature icon="fas fa-cogs" title="Cloud Data Pipelines" %}}
-Using AWS and other clouds
+Complex compute-intensive workflows in AWS or other clouds.
 {{% /blocks/feature %}}
 
 
